looks perfect idk i just changed prompt

--- a/changes.txt
+++ b/changes.txt
@@ -192,3 +192,6 @@ It will show like
     "o": "Information Content Entity"
   }
 - I saw it was the problem with obo and two so I specify in prompt to only use those namespace if its absolutely needed.
+
+- Okay so I asked Indika about this ""obo:IAO_0000310" these type of stuff, he told me he check the ontology and found obo:IAO-* are annotation meant for describing properties not instance. Real object properties are under obo:MCRO_*. So triples generated earlier might be using some incorrect CURIEs from IAO namespace as object properties. So maybe during mapping process when gemini suggests a CURIE like swo:SWO_000002 is incorrect. So the problem is 2fold - make sure gemini map model cards field only mcro and filter generated triples. As gemini is llm it might not strictly follow the ontology. Therefore I have to do post proessing to validate all predicates are mcro is necessary. As I am uploading the ontology to mcro.ttl to gemini so maybe gemini should know valid properties but it not able to interpret it properly, so basically even after providing model can make mistakes so I think its better to put a validation layer in the code to filter out invalid predicates. So the thing I can do is 1. Parse mcro.ttl and extract all valid object properties (under obo:MCRO_*) then gemini will return triples and validate each predicate against this list then if a predicate is invalid either skip or attempt to find the better replacement.
+So the thing is how to do this programmatically , first I can sparql query related to all properties which have instances of owl:objectproperty and belong to mcro namespace. Then in post processing of json triples if a predicate have valid mcro property then allow otherwise discord and log warning , anything start with obo:IAO will be excluded and return output as in rdf turle format 
