--- a/triple_creation.ipynb
+++ b/triple_creation.ipynb
@@ -2,49 +2,159 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "6e797a6f-09e2-4d91-b375-7fe3993600bf",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/v/Documents/Thesis/automation-model-cards/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n",
-      "/Users/v/Documents/Thesis/automation-model-cards/.venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "=== ONTOLOGY-AWARE TRIPLE GENERATION STARTED ===\n",
       "Uploading MCRO ontology...\n",
-      "Ontology uploaded: files/k8xrgqn9w9a6\n",
+      "Ontology uploaded: files/n5h5y1vw8u7z\n",
       "Processed 1/10: timm/mobilenetv3_small_100.lamb_in1k\n",
-      "Generated 4 triples\n",
+      "Generated 16 triples\n",
       "Processed 2/10: sentence-transformers/all-MiniLM-L6-v2\n",
-      "Generated 8 triples\n",
+      "Generated 10 triples\n",
       "Processed 3/10: Falconsai/nsfw_image_detection\n",
-      "Generated 3 triples\n",
+      "Generated 19 triples\n",
       "Processed 4/10: dima806/fairface_age_image_detection\n",
-      "Generated 11 triples\n",
-      "Processed 5/10: google-bert/bert-base-uncased\n",
-      "Generated 4 triples\n",
-      "Processed 6/10: openai/clip-vit-large-patch14\n",
-      "Generated 4 triples\n",
-      "Processed 7/10: TheBloke/phi-2-GGUF\n",
       "Generated 10 triples\n",
-      "Processed 8/10: facebook/esmfold_v1\n",
-      "Generated 10 triples\n",
-      "Processed 9/10: amazon/chronos-t5-small\n",
-      "Generated 17 triples\n",
-      "Processed 10/10: Bingsu/adetailer\n",
-      "Generated 21 triples\n",
+      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
+      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
+      "  quota_dimensions {\n",
+      "    key: \"model\"\n",
+      "    value: \"gemini-2.0-flash\"\n",
+      "  }\n",
+      "  quota_dimensions {\n",
+      "    key: \"location\"\n",
+      "    value: \"global\"\n",
+      "  }\n",
+      "  quota_value: 15\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 28\n",
+      "}\n",
+      "]\n",
+      "No triples returned for google-bert/bert-base-uncased\n",
+      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
+      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
+      "  quota_dimensions {\n",
+      "    key: \"model\"\n",
+      "    value: \"gemini-2.0-flash\"\n",
+      "  }\n",
+      "  quota_dimensions {\n",
+      "    key: \"location\"\n",
+      "    value: \"global\"\n",
+      "  }\n",
+      "  quota_value: 15\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 28\n",
+      "}\n",
+      "]\n",
+      "No triples returned for openai/clip-vit-large-patch14\n",
+      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
+      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
+      "  quota_dimensions {\n",
+      "    key: \"model\"\n",
+      "    value: \"gemini-2.0-flash\"\n",
+      "  }\n",
+      "  quota_dimensions {\n",
+      "    key: \"location\"\n",
+      "    value: \"global\"\n",
+      "  }\n",
+      "  quota_value: 15\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 28\n",
+      "}\n",
+      "]\n",
+      "No triples returned for TheBloke/phi-2-GGUF\n",
+      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
+      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
+      "  quota_dimensions {\n",
+      "    key: \"model\"\n",
+      "    value: \"gemini-2.0-flash\"\n",
+      "  }\n",
+      "  quota_dimensions {\n",
+      "    key: \"location\"\n",
+      "    value: \"global\"\n",
+      "  }\n",
+      "  quota_value: 15\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 27\n",
+      "}\n",
+      "]\n",
+      "No triples returned for facebook/esmfold_v1\n",
+      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
+      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
+      "  quota_dimensions {\n",
+      "    key: \"model\"\n",
+      "    value: \"gemini-2.0-flash\"\n",
+      "  }\n",
+      "  quota_dimensions {\n",
+      "    key: \"location\"\n",
+      "    value: \"global\"\n",
+      "  }\n",
+      "  quota_value: 15\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 27\n",
+      "}\n",
+      "]\n",
+      "No triples returned for amazon/chronos-t5-small\n",
+      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
+      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
+      "  quota_dimensions {\n",
+      "    key: \"model\"\n",
+      "    value: \"gemini-2.0-flash\"\n",
+      "  }\n",
+      "  quota_dimensions {\n",
+      "    key: \"location\"\n",
+      "    value: \"global\"\n",
+      "  }\n",
+      "  quota_value: 15\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 27\n",
+      "}\n",
+      "]\n",
+      "No triples returned for Bingsu/adetailer\n",
       "\n",
-      "✅ Saved 92 triples to extracted_triples.json\n",
+      "✅ Saved 55 triples to extracted_triples.json\n",
       "\n",
       "=== COMPLETED ===\n"
      ]
@@ -83,13 +193,24 @@
     "        raise\n",
     "\n",
     "def get_mapped_triples(model_card_text, mcro_file, model_id):\n",
+    "    prompt = f\"\"\"Using the attached Model Card Ontology (MCRO) file ({mcro_file.uri}), analyze this Hugging Face model card text and return only RDF triples in JSON format. Follow these strict rules:\n",
     "\n",
-    "    prompt = f\"\"\"Using the attached MCRO ontology file ({mcro_file.uri}), analyze this Hugging Face model card and return:\n",
+    "### 🎯 Rules for Mapping\n",
+    "1. Only use terms defined in the MCRO ontology.\n",
+    "2. Always map metadata fields to appropriate MCRO concepts **by their CURIEs**, such as:\n",
+    "   - license → mcro:LicenseInformationSection\n",
+    "   - dataset → mcro:DatasetInformationSection\n",
+    "   - model architecture → mcro:ModelArchitectureInformationSection\n",
+    "   - citation → mcro:CitationInformationSection\n",
+    "   - intended use case → mcro:UseCaseInformationSection\n",
+    "3. Use proper relationships:\n",
+    "   - `rdf:type` for types\n",
+    "   - `prov:hasTextValue` for textual values (like \"mit\", \"CNN\", \"ImageNet\")\n",
+    "   - Appropriate `mcro:hasX` properties for linking model to its sections\n",
+    "4. Never assign `rdf:type` to abstract IAO classes like `obo:IAO_*`.\n",
+    "5. Never directly type instances with `obo:MCRO_0000004`, `obo:MCRO_0000016`, etc. — always use CURIEs like `mcro:CitationInformationSection`, `mcro:LicenseInformationSection`.\n",
     "\n",
-    "1. All metadata fields (like license, description, tags, dataset, etc.)\n",
-    "2. Map each to appropriate MCRO ontology concepts using exact CURIE syntax\n",
-    "   - Example CURIE: mcro:HasLicense\n",
-    "3. Return ONLY a JSON array of triples in this format:\n",
+    "### 📄 Sample Output Format:\n",
     "[\n",
     "  {{\n",
     "    \"s\": \"mcro:{clean_identifier(model_id)}\",\n",
@@ -98,13 +219,13 @@
     "  }},\n",
     "  {{\n",
     "    \"s\": \"mcro:{clean_identifier(model_id)}\",\n",
-    "    \"p\": \"mcro:HasLicense\",\n",
+    "    \"p\": \"mcro:hasLicense\",\n",
     "    \"o\": \"mcro:{clean_identifier(model_id)}-License\"\n",
     "  }},\n",
     "  {{\n",
     "    \"s\": \"mcro:{clean_identifier(model_id)}-License\",\n",
     "    \"p\": \"rdf:type\",\n",
-    "    \"o\": \"mcro:License\"\n",
+    "    \"o\": \"mcro:LicenseInformationSection\"\n",
     "  }},\n",
     "  {{\n",
     "    \"s\": \"mcro:{clean_identifier(model_id)}-License\",\n",
@@ -112,13 +233,11 @@
     "    \"o\": \"mit\"\n",
     "  }}\n",
     "]\n",
-    "Important Rules:\n",
-    "- Only use terms from the ontology\n",
-    "- Use CURIE format (prefix:localname)\n",
-    "- Always link back to base namespace: http://sbmi.uth.edu/ontology/mcro#\n",
-    "- For literal values, use prov:hasTextValue\n",
-    "- No explanation or markdown\n",
-    "- Keep all responses strictly within JSON format\"\"\"\n",
+    "Important: Return ONLY the JSON array. No explanation. No markdown.\n",
+    "\n",
+    "### 📥 Input Text:\n",
+    "{model_card_text}\n",
+    "\"\"\"\n",
     "\n",
     "    try:\n",
     "        response = gemini_model.generate_content(\n",
@@ -126,7 +245,7 @@
     "            request_options={\"timeout\": 60}\n",
     "        )\n",
     "\n",
-    "        # Extract & parse JSON\n",
+    "        # Extract JSON\n",
     "        json_str = response.text.strip()\n",
     "        if \"```json\" in json_str:\n",
     "            json_str = json_str.split(\"```json\")[1].split(\"```\")[0].strip()\n",
@@ -134,7 +253,7 @@
     "        return json.loads(json_str)\n",
     "    \n",
     "    except Exception as e:\n",
-    "        print(f\"Gemini error: {e}\")\n",
+    "        print(f\"Error: {e}\")\n",
     "        return []\n",
     "\n",
     "def process_huggingface_models(limit=10):\n",
