added KGQA for NL to sparql query

--- a/kgqa.ipynb
+++ b/kgqa.ipynb
@@ -1,230 +1,19 @@
-{
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "87dedae4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/v/Documents/Thesis/automation-model-cards/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n",
-      "/Users/v/Documents/Thesis/automation-model-cards/.venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Imports & Configuration\n",
-    "import re\n",
-    "import requests\n",
-    "from rdflib import Graph\n",
-    "import google.generativeai as genai\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "067490e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Initialize Knowledge Graph\n",
-    "kg = Graph()\n",
-    "kg.parse(\"model_card-3.ttl\", format=\"turtle\")  \n",
-    "\n",
-    "# Configure Gemini API\n",
-    "GTOKEN = \"AIzaSyCLwWkDW03zjzVKUQf3ui5wgcreVJdsMbw\"\n",
-    "genai.configure(api_key=GTOKEN)\n",
-    "gemini = genai.GenerativeModel('gemini-1.5-pro')\n",
-    "\n",
-    "# GraphDB Connection Settings\n",
-    "GRAPHDB_ENDPOINT = \"http://Vishals-MacBook-Air.local:7200/repositories/thesis\"\n",
-    "\n",
-    "PREFIXES = \"\"\"\n",
-    "PREFIX mcro: <http://purl.obolibrary.org/obo/mcro.owl#>\n",
-    "PREFIX dul: <http://www.ontologydesignpatterns.org/ont/dul/DUL.owl#>\n",
-    "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
-    "PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>\n",
-    "\"\"\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed448e0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Text to SPARQL Conversion\n",
-    "def generate_sparql(question: str) -> str:\n",
-    "    \"\"\"Convert natural language question to SPARQL query\"\"\"\n",
-    "    # Get schema context information\n",
-    "    classes_props = kg.query(\"\"\"\n",
-    "        SELECT DISTINCT ?resource ?label WHERE {\n",
-    "            { ?resource a rdfs:Class }\n",
-    "            UNION\n",
-    "            { ?resource a rdf:Property }\n",
-    "            OPTIONAL { ?resource rdfs:label ?label }\n",
-    "        }\n",
-    "    \"\"\")\n",
-    "    \n",
-    "    # Build context string from ontology terms\n",
-    "    context = \"\\n\".join([\n",
-    "        f\"- {row.label or row.resource.split('#')[-1]} ({row.resource})\" \n",
-    "        for row in classes_props\n",
-    "    ][:10]) \n",
-    "\n",
-    "    prompt = f\"\"\"\n",
-    "    {PREFIXES}\n",
-    "    \n",
-    "    Convert this question to SPARQL using the following schema terms:\n",
-    "    {context}\n",
-    "    \n",
-    "    Question: {question}\n",
-    "    \n",
-    "    Rules:\n",
-    "    1. Use SELECT DISTINCT for model queries\n",
-    "    2. mcro:Model is the base class\n",
-    "    3. Use FILTER with xsd:decimal for numeric comparisons\n",
-    "    4. Always include prefixes\n",
-    "    5. Return only valid SPARQL within ```sparql blocks\n",
-    "    \n",
-    "    SPARQL:\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    response = gemini.generate_content(prompt)\n",
-    "    return re.search(r\"```sparql(.*?)```\", response.text, re.DOTALL).group(1).strip()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a1a13ccd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# SPARQL Execution\n",
-    "def run_sparql(query: str) -> dict:\n",
-    "    \"\"\"Execute SPARQL query against GraphDB endpoint\"\"\"\n",
-    "    try:\n",
-    "        response = requests.post(\n",
-    "            GRAPHDB_ENDPOINT,\n",
-    "            headers={\n",
-    "                \"Accept\": \"application/sparql-results+json\",\n",
-    "                \"Content-Type\": \"application/sparql-query\"\n",
-    "            },\n",
-    "            data=query,\n",
-    "            timeout=10\n",
-    "        )\n",
-    "        return response.json() if response.ok else {\"error\": response.text}\n",
-    "    except Exception as e:\n",
-    "        return {\"error\": str(e)}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "2bc6ba94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Results to Natural Language\n",
-    "def format_results(results: dict) -> str:\n",
-    "    if \"error\" in results:\n",
-    "        return f\"Error: {results['error']}\"\n",
-    "    \n",
-    "    bindings = results.get('results', {}).get('bindings', [])\n",
-    "    if not bindings:\n",
-    "        return \"No results found\"\n",
-    "    \n",
-    "    output = []\n",
-    "    # Detect primary variable name from first result\n",
-    "    primary_var = next(iter(bindings[0].keys())) if bindings else None\n",
-    "    \n",
-    "    for row in bindings:\n",
-    "        if primary_var:\n",
-    "            entity = row[primary_var]['value'].split('#')[-1]\n",
-    "            details = [\n",
-    "                f\"{k}: {v['value']}\" \n",
-    "                for k, v in row.items() \n",
-    "                if k != primary_var\n",
-    "            ]\n",
-    "            output.append(f\"- {entity}\" + (f\" ({', '.join(details)})\" if details else \"\"))\n",
-    "    \n",
-    "    return f\"Query Results ({len(output)} items):\\n\" + \"\\n\".join(output)\n",
-    "\n",
-    "question = \"Show all model with vit\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "96ab5439",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated SPARQL query:\n",
-      "PREFIX mcro: <http://purl.obolibrary.org/obo/mcro.owl#>\n",
-      "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
-      "\n",
-      "SELECT DISTINCT ?model\n",
-      "WHERE {\n",
-      "    ?model a mcro:Model .\n",
-      "    ?model ?p ?o .\n",
-      "    FILTER(REGEX(STR(?o), \"vit\", \"i\"))\n",
-      "}\n",
-      "\n",
-      "Query Results:\n",
-      "Query Results (1 items):\n",
-      "- openaiclipvitlargepatch14\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Generate SPARQL query\n",
-    "sparql = generate_sparql(question)\n",
-    "print(\"Generated SPARQL query:\")\n",
-    "print(sparql)\n",
-    "\n",
-    "# Execute the query\n",
-    "results = run_sparql(sparql)\n",
-    "\n",
-    "# Display results\n",
-    "print(\"\\nQuery Results:\")\n",
-    "print(format_results(results))"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": ".venv",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+def gemini_to_sparql(question):
+    prompt = f"""
+    Convert this question into a SPARQL query:
+    "{question}"
+
+    Use these prefixes:
+    PREFIX mcro: <http://purl.obolibrary.org/obo/MCRO_>
+    PREFIX prov1: <https://www.w3.org/ns/prov#>
+
+    Return ONLY the SPARQL query.
+    """
+    response = model.generate_content(prompt)
+    return response.text.strip()
+
+# Example usage
+question = "What datasets were used to train the Falcon NSFW model?"
+sparql_query = gemini_to_sparql(question)
+results = graphdb_client.query(sparql_query)
+print(results)
