--- a/triple_creation.ipynb
+++ b/triple_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "6e797a6f-09e2-4d91-b375-7fe3993600bf",
    "metadata": {},
    "outputs": [
@@ -12,149 +12,52 @@
      "text": [
       "=== ONTOLOGY-AWARE TRIPLE GENERATION STARTED ===\n",
       "Uploading MCRO ontology...\n",
-      "Ontology uploaded: files/n5h5y1vw8u7z\n",
-      "Processed 1/10: timm/mobilenetv3_small_100.lamb_in1k\n",
-      "Generated 16 triples\n",
-      "Processed 2/10: sentence-transformers/all-MiniLM-L6-v2\n",
+      "Ontology uploaded: files/gq1arqu2gsba\n",
+      "Processed 1/20: timm/mobilenetv3_small_100.lamb_in1k\n",
+      "Generated 18 triples\n",
+      "Processed 2/20: sentence-transformers/all-MiniLM-L6-v2\n",
       "Generated 10 triples\n",
-      "Processed 3/10: Falconsai/nsfw_image_detection\n",
+      "Processed 3/20: Falconsai/nsfw_image_detection\n",
+      "Generated 20 triples\n",
+      "Processed 4/20: dima806/fairface_age_image_detection\n",
+      "Generated 7 triples\n",
+      "Processed 5/20: google-bert/bert-base-uncased\n",
+      "Generated 21 triples\n",
+      "Processed 6/20: openai/clip-vit-large-patch14\n",
+      "Generated 128 triples\n",
+      "Processed 7/20: TheBloke/phi-2-GGUF\n",
+      "Generated 18 triples\n",
+      "Processed 8/20: facebook/esmfold_v1\n",
+      "Generated 10 triples\n",
+      "Processed 9/20: FacebookAI/roberta-large\n",
+      "Generated 15 triples\n",
+      "Processed 10/20: amazon/chronos-t5-small\n",
+      "Generated 10 triples\n",
+      "Processed 11/20: Bingsu/adetailer\n",
+      "Generated 7 triples\n",
+      "Processed 12/20: google/electra-base-discriminator\n",
       "Generated 19 triples\n",
-      "Processed 4/10: dima806/fairface_age_image_detection\n",
+      "Processed 13/20: sentence-transformers/all-mpnet-base-v2\n",
       "Generated 10 triples\n",
-      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
-      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
-      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
-      "  quota_dimensions {\n",
-      "    key: \"model\"\n",
-      "    value: \"gemini-2.0-flash\"\n",
-      "  }\n",
-      "  quota_dimensions {\n",
-      "    key: \"location\"\n",
-      "    value: \"global\"\n",
-      "  }\n",
-      "  quota_value: 15\n",
-      "}\n",
-      ", links {\n",
-      "  description: \"Learn more about Gemini API quotas\"\n",
-      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
-      "}\n",
-      ", retry_delay {\n",
-      "  seconds: 28\n",
-      "}\n",
-      "]\n",
-      "No triples returned for google-bert/bert-base-uncased\n",
-      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
-      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
-      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
-      "  quota_dimensions {\n",
-      "    key: \"model\"\n",
-      "    value: \"gemini-2.0-flash\"\n",
-      "  }\n",
-      "  quota_dimensions {\n",
-      "    key: \"location\"\n",
-      "    value: \"global\"\n",
-      "  }\n",
-      "  quota_value: 15\n",
-      "}\n",
-      ", links {\n",
-      "  description: \"Learn more about Gemini API quotas\"\n",
-      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
-      "}\n",
-      ", retry_delay {\n",
-      "  seconds: 28\n",
-      "}\n",
-      "]\n",
-      "No triples returned for openai/clip-vit-large-patch14\n",
-      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
-      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
-      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
-      "  quota_dimensions {\n",
-      "    key: \"model\"\n",
-      "    value: \"gemini-2.0-flash\"\n",
-      "  }\n",
-      "  quota_dimensions {\n",
-      "    key: \"location\"\n",
-      "    value: \"global\"\n",
-      "  }\n",
-      "  quota_value: 15\n",
-      "}\n",
-      ", links {\n",
-      "  description: \"Learn more about Gemini API quotas\"\n",
-      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
-      "}\n",
-      ", retry_delay {\n",
-      "  seconds: 28\n",
-      "}\n",
-      "]\n",
-      "No triples returned for TheBloke/phi-2-GGUF\n",
-      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
-      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
-      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
-      "  quota_dimensions {\n",
-      "    key: \"model\"\n",
-      "    value: \"gemini-2.0-flash\"\n",
-      "  }\n",
-      "  quota_dimensions {\n",
-      "    key: \"location\"\n",
-      "    value: \"global\"\n",
-      "  }\n",
-      "  quota_value: 15\n",
-      "}\n",
-      ", links {\n",
-      "  description: \"Learn more about Gemini API quotas\"\n",
-      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
-      "}\n",
-      ", retry_delay {\n",
-      "  seconds: 27\n",
-      "}\n",
-      "]\n",
-      "No triples returned for facebook/esmfold_v1\n",
-      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
-      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
-      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
-      "  quota_dimensions {\n",
-      "    key: \"model\"\n",
-      "    value: \"gemini-2.0-flash\"\n",
-      "  }\n",
-      "  quota_dimensions {\n",
-      "    key: \"location\"\n",
-      "    value: \"global\"\n",
-      "  }\n",
-      "  quota_value: 15\n",
-      "}\n",
-      ", links {\n",
-      "  description: \"Learn more about Gemini API quotas\"\n",
-      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
-      "}\n",
-      ", retry_delay {\n",
-      "  seconds: 27\n",
-      "}\n",
-      "]\n",
-      "No triples returned for amazon/chronos-t5-small\n",
-      "Error: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
-      "  quota_metric: \"generativelanguage.googleapis.com/generate_content_free_tier_requests\"\n",
-      "  quota_id: \"GenerateRequestsPerMinutePerProjectPerModel-FreeTier\"\n",
-      "  quota_dimensions {\n",
-      "    key: \"model\"\n",
-      "    value: \"gemini-2.0-flash\"\n",
-      "  }\n",
-      "  quota_dimensions {\n",
-      "    key: \"location\"\n",
-      "    value: \"global\"\n",
-      "  }\n",
-      "  quota_value: 15\n",
-      "}\n",
-      ", links {\n",
-      "  description: \"Learn more about Gemini API quotas\"\n",
-      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
-      "}\n",
-      ", retry_delay {\n",
-      "  seconds: 27\n",
-      "}\n",
-      "]\n",
-      "No triples returned for Bingsu/adetailer\n",
+      "Processed 14/20: pyannote/wespeaker-voxceleb-resnet34-LM\n",
+      "Generated 13 triples\n",
+      "Processed 15/20: timm/resnet50.a1_in1k\n",
+      "Generated 17 triples\n",
+      "Processed 16/20: openai/clip-vit-base-patch32\n",
+      "Generated 15 triples\n",
+      "Processed 17/20: pyannote/segmentation-3.0\n",
+      "Generated 10 triples\n",
+      "Processed 18/20: openai-community/gpt2\n",
+      "Generated 20 triples\n",
+      "Processed 19/20: modularai/Llama-3.1-8B-Instruct-GGUF\n",
+      "Generated 17 triples\n",
+      "Processed 20/20: pyannote/speaker-diarization-3.1\n",
+      "Generated 5 triples\n",
       "\n",
-      "✅ Saved 55 triples to extracted_triples.json\n",
+      "✅ Saved 390 triples to extracted_triples.json\n",
+      "\n",
+      "=== CONVERTING TO TURTLE ===\n",
+      "Turtle file saved to extracted_triples.ttl\n",
       "\n",
       "=== COMPLETED ===\n"
      ]
@@ -176,6 +79,15 @@
     "# Initialize Gemini\n",
     "genai.configure(api_key=GTOKEN)\n",
     "gemini_model = genai.GenerativeModel('gemini-2.0-flash')\n",
+    "\n",
+    "prefix_map = {\n",
+    "    \"mcro\": \"http://purl.obolibrary.org/obo/MCRO_\",\n",
+    "    \"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\",\n",
+    "    \"rdfs\": \"http://www.w3.org/2000/01/rdf-schema#\",\n",
+    "    \"owl\": \"http://www.w3.org/2002/07/owl#\",\n",
+    "    \"prov\": \"https://www.w3.org/ns/prov#\",\n",
+    "    \"obo\": \"http://purl.obolibrary.org/obo/\"\n",
+    "}\n",
     "\n",
     "def clean_identifier(text):\n",
     "    \"\"\"Generate safe identifier\"\"\"\n",
@@ -285,9 +197,52 @@
     "    print(f\"\\n✅ Saved {len(all_triples)} triples to {OUTPUT_JSON_PATH}\")\n",
     "    return all_triples\n",
     "\n",
+    "def convert_json_triples_to_turtle(json_triples_path, turtle_output_path, prefix_map):\n",
+    "    \"\"\"Convert JSON triples to Turtle format and save to file\"\"\"\n",
+    "    g = Graph()\n",
+    "\n",
+    "    # Bind prefixes for cleaner output\n",
+    "    for prefix, uri in prefix_map.items():\n",
+    "        g.bind(prefix, Namespace(uri))\n",
+    "\n",
+    "    # Load JSON triples\n",
+    "    with open(json_triples_path, \"r\") as f:\n",
+    "        triples = json.load(f)\n",
+    "\n",
+    "    # Helper to expand CURIEs\n",
+    "    def expand(curie):\n",
+    "        if \":\" in curie:\n",
+    "            prefix, local = curie.split(\":\", 1)\n",
+    "            if prefix in prefix_map:\n",
+    "                return URIRef(prefix_map[prefix] + local)\n",
+    "            elif prefix == \"obo\":\n",
+    "                return URIRef(f\"http://purl.obolibrary.org/obo/{local}\")\n",
+    "        return URIRef(curie)\n",
+    "\n",
+    "    # Add triples to graph\n",
+    "    for t in triples:\n",
+    "        s = expand(t[\"s\"])\n",
+    "        p = expand(t[\"p\"])\n",
+    "        o = t[\"o\"]\n",
+    "\n",
+    "        # If the predicate is a data property, wrap object in Literal\n",
+    "        if str(p) == prefix_map[\"prov\"] + \"hasTextValue\":\n",
+    "            g.add((s, p, Literal(o)))\n",
+    "        else:\n",
+    "            g.add((s, p, expand(o)))\n",
+    "\n",
+    "    # Save Turtle file\n",
+    "    turtle_data = g.serialize(format=\"turtle\", encoding=\"utf-8\").decode(\"utf-8\")\n",
+    "    with open(turtle_output_path, \"w\") as f:\n",
+    "        f.write(turtle_data)\n",
+    "\n",
+    "    print(f\"Turtle file saved to {turtle_output_path}\")\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
     "    print(\"=== ONTOLOGY-AWARE TRIPLE GENERATION STARTED ===\")\n",
-    "    process_huggingface_models(limit=10)\n",
+    "    process_huggingface_models(limit=20)\n",
+    "    print(\"\\n=== CONVERTING TO TURTLE ===\")\n",
+    "    convert_json_triples_to_turtle(OUTPUT_JSON_PATH, \"extracted_triples.ttl\", prefix_map)\n",
     "    print(\"\\n=== COMPLETED ===\")"
    ]
   }
